--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ async-stream = "0.3"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
 config = { version = "0.14.0", features = ["yaml"] }
+minijinja = "2.11.0"
