--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,29 +17,22 @@ jobs:
           - release_for: Linux-x86_64
             os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            bin: ccor2
-            name: ccor2-Linux-x86_64.tar.gz
+            bin: ccorp
+            name: ccorp-Linux-x86_64.tar.gz
             command: build
 
           - release_for: Windows-x86_64
             os: windows-latest
             target: x86_64-pc-windows-msvc
-            bin: ccor2.exe
-            name: ccor2-Windows-x86_64.zip
-            command: build
-
-          - release_for: macOS-x86_64
-            os: macOS-latest
-            target: x86_64-apple-darwin
-            bin: ccor2
-            name: ccor2-Darwin-x86_64.tar.gz
+            bin: ccorp.exe
+            name: ccorp-Windows-x86_64.zip
             command: build
 
           - release_for: macOS-aarch64
             os: macOS-latest
             target: aarch64-apple-darwin
-            bin: ccor2
-            name: ccor2-Darwin-aarch64.tar.gz
+            bin: ccorp
+            name: ccorp-Darwin-aarch64.tar.gz
             command: build
 
     runs-on: ${{ matrix.platform.os }}
